Add many changes

--- a/src/main/resources/LoginPage.html
+++ b/src/main/resources/LoginPage.html
@@ -42,7 +42,7 @@ $.ajax({
     url: "http://localhost:8080/login",
     data: JSON.stringify(send),
     contentType: "application/json",
-    success: function(data){window.location.href = "src/main/resources/ShowCookie.html";},
+    success: function(data){window.location.href = data;},
     failure: function(errMsg) {
         alert(errMsg);
     }
