Add IdLoginPassword Add CookiesMap Change requesHandler and others

--- a/src/main/resources/AddItem.html
+++ b/src/main/resources/AddItem.html
@@ -13,12 +13,12 @@
     </div>
     <div>
         <label for="price">price</label>
-        <input name="price" value="14.88">
+        <input name="price" id="price" value="14.88">
     </div>
     <div>
         <select>
             <option value="food">Food</option>
-            <option value="cloth">cloth</option>
+            <option value="clothes">Clothes</option>
         </select>
     </div>
     <div>
