--- a/src/main/resources/AddItem.html
+++ b/src/main/resources/AddItem.html
@@ -6,17 +6,25 @@
 </head>
 <body>
 <h1>What item do you want to add?</h1>
-<form action="http://localhost:8080/login" id="myForm2" method="post">
+<form action="http://localhost:8080/" id="myForm2" method="post">
     <div >
-        <label for="item">item</label>
-        <input name="item" id="item" value="bread">
+        <label for="name">name</label>
+        <input name="name" id="name" value="bread">
     </div>
     <div>
         <label for="price">price</label>
         <input name="price" id="price" value="14.88">
     </div>
     <div>
-        <select>
+        <label for="date">date</label>
+        <input name="date" id="date" value="14.05.2022">
+    </div>
+    <div>
+        <label for="place">place</label>
+        <input name="place" id="place" value="Moscow">
+    </div>
+    <div>
+        <select name = "itemType">
             <option value="food">Food</option>
             <option value="clothes">Clothes</option>
         </select>
@@ -26,7 +34,34 @@
     </div>
 </form>
 <script>
+    // Attach a submit handler to the form
+$( "#myForm2" ).submit(function( event ) {
 
+  // Stop form from submitting normally
+  event.preventDefault();
+
+ var myfun = function objectifyForm(formArray) {//serialize data function
+  var returnArray = {};
+  for (var i = 0; i < formArray.length; i++){
+    returnArray[formArray[i]['name']] = formArray[i]['value'];
+  }
+  return returnArray;
+}
+
+    var ar = $( "#myForm2" ).serializeArray()
+    var send = myfun(ar);
+
+$.ajax({
+    type: 'post',
+    url: "http://localhost:8080/addDefiniteItem",
+    data: JSON.stringify(send),
+    contentType: "application/json",
+    success: function(data){window.location.href = data;},
+    failure: function(errMsg) {
+        alert(errMsg);
+    }
+});
+});
 </script>
 
 
