--- a/src/main/resources/html/LoginPage.html
+++ b/src/main/resources/html/LoginPage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Do you want to login?</h1>
-<form action="http://localhost:8080/" id="myForm2" method="post">
+<form action="http://localhost:8080/ryyjfghj" id="myForm2" method="post">
     <div >
         <label for="login">login</label>
         <input name="login" id="login" value="loginv">
@@ -19,7 +19,7 @@
         <button id = "btn">Send</button>
     </div>
 </form>
-<script src = "Logging.js">
+<script src = "../Logging.js">
 
 </script>
 
