Add select support in DB

--- a/src/main/resources/html/SelectItem.html
+++ b/src/main/resources/html/SelectItem.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<h1>What item do you want to add?</h1>
+<h1>What item do you want to select?</h1>
 <form action="http://localhost:8080/" id="myForm2" method="post">
     <div >
         <label for="name">name</label>
@@ -15,7 +15,7 @@
         <label for="price">price</label>
         <select name = "priceLEG">
             <option value="Less">Less</option>
-            <option value="Equals">Equals</option>
+            <option value="Equal">Equal</option>
             <option value="Greater">Greater</option>
         </select>
         <input name="price" id="price" value="14.88">
