Change date type, add place constraint, change html date value

--- a/src/main/resources/html/AddItem.html
+++ b/src/main/resources/html/AddItem.html
@@ -17,7 +17,7 @@
     </div>
     <div>
         <label for="date">date</label>
-        <input name="date" id="date" value="14.05.2022">
+        <input name="date" id="date" value="2022-10-11">
     </div>
     <div>
         <label for="place">place</label>
