--- a/src/main/resources/html/SelectItem.html
+++ b/src/main/resources/html/SelectItem.html
@@ -29,7 +29,7 @@
             <option value="Equal">Equal</option>
             <option value="Greater">Greater</option>
         </select>
-        <input name="date" id="date" value="14.05.2022">
+        <input name="date" id="date" value="2022-10-11">
     </div>
     <div>
         <label for="place">place</label>
