--- a/src/main/resources/html/LoginError.html
+++ b/src/main/resources/html/LoginError.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Such login and password is not registrated</h1>
-<form action="http://localhost.com:8080/loginPage" id="myForm2" method="get">
+<form action="http://localhost:8080/loginPage" id="myForm2" method="get">
     <div>
         <button id = "btn">retry</button>
     </div>
