--- a/src/main/resources/html/ShowCookie.html
+++ b/src/main/resources/html/ShowCookie.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Do you want to get user operations?</h1>
-<form action="http://localhost.com:8080/cookie" id = "myForm" method="get">
+<form action="http://localhost:8080/cookie" id = "myForm" method="get">
     <div>
         <button>Yes</button>
     </div>
