--- a/src/main/resources/html/AddOrSelect.html
+++ b/src/main/resources/html/AddOrSelect.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <h1>Do you want to add or to select?</h1>
-<form action="http://localhost.com:8080/additem" id="myForm2" method="get">
+<form action="http://localhost:8080/additem" id="myForm2" method="get">
     <div>
         <button id = "btn">add</button>
     </div>
 </form>
-<form action="http://localhost.com:8080/selectItem" id="myForm" method="get">
+<form action="http://localhost:8080/selectItem" id="myForm" method="get">
     <div>
         <button id = "btn">select</button>
     </div>
