--- a/src/main/resources/html/LoginPage.html
+++ b/src/main/resources/html/LoginPage.html
@@ -39,7 +39,7 @@ $( "#myForm2" ).submit(function( event ) {
 
 $.ajax({
     type: 'post',
-    url: "http://localhost.com:8080/login",
+    url: "http://localhost:8080/login",
     data: JSON.stringify(send),
     contentType: "application/json",
     success: function(data){window.location.href = data;},
