--- a/src/main/resources/html/AddOrSelect.html
+++ b/src/main/resources/html/AddOrSelect.html
@@ -8,12 +8,17 @@
 <h1>Do you want to add or to select?</h1>
 <form action="http://localhost:8080/additem" id="myForm2" method="get">
     <div>
-        <button id = "btn">add</button>
+        <button id = "btn">Add</button>
     </div>
 </form>
 <form action="http://localhost:8080/selectItem" id="myForm" method="get">
     <div>
-        <button id = "btn">select</button>
+        <button id = "btn">Select</button>
+    </div>
+</form>
+<form action="http://localhost:8080/" id="myForm" method="get">
+    <div>
+        <button id = "btn">Change user</button>
     </div>
 </form>
 
