--- a/src/main/resources/html/LoginPage.html
+++ b/src/main/resources/html/LoginPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Data sending</title>
+    <title>Login page</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 </head>
 <body>
